GitVersion1/objects/Application_Mapping__c.object
<CustomObject>
    <description>Links Salesforce record with external system via the Golden Record ID</description>
    <fields>
        <fullName>Account_Record_Id_Formula__c</fullName>
        <formula>CDH_Account__r.CDH_Link_to_Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Id Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application Mappings</relationshipLabel>
        <relationshipName>Application_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CDH_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDH Account</label>
        <referenceTo>CDH_Account__c</referenceTo>
        <relationshipName>CDH_External</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>To capture the Description of Mapping</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Record_num__c</fullName>
        <description>Links Data Hub record to external record</description>
        <externalId>true</externalId>
        <label>External Record #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <label>External System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PROS</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>AXAPTA</fullName>
                </value>
                <value>
                    <fullName>MAX</fullName>
                </value>
                <value>
                    <fullName>DDW</fullName>
                </value>
                <value>
                    <fullName>NIS</fullName>
                </value>
                <value>
                    <fullName>LM</fullName>
                </value>
                <value>
                    <fullName>LM_SITE</fullName>
                </value>
                <value>
                    <fullName>MOBILE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Golden_Record__c</fullName>
        <formula>CDH_Account__r.CDH_Golden_Record__c</formula>
        <label>Golden Record #</label>
        <type>Text</type>
    </fields>
    <label>Application Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CDH_Account__c</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Application Mapping #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>